# CMPT-433-A4

./: CMakeLists.txt
_ExampleResources/neoPixelRGBWBasic/: neoPixelRGBWSimple.c
app/: CMakeLists.txt
app/include/: pwmDriver.h  sharedDataStruct.h  sharedMemLinux.h  sharedMemory.h
app/src/: audioMixer.c  main.c  pwmDriver.c  sharedMemLinux.c
hal/: CMakeLists.txt
hal/include/hal/: acc.h  accelerometer.h  segDisplay.h  sharedUtil.h
hal/src/: acc.c  accelerometer.c  pwm.c  segDisplay.c  sharedUtil.c
pru-as4/: CMakeLists.txt  pruAs4.c  sharedMemPRU.c  sharedMemory.h
wave-files/: additional_soundfiles.txt
